--- a/hw/hw_1/index.html
+++ b/hw/hw_1/index.html
@@ -34,9 +34,9 @@
         <img src="/cst336/hw/hw_1/img/csumb_logo.png" alt="CSUMB logo" title="CSUMB logo"/>
         <br>
         <h4><strong>Sources:</strong>
-        <a href="https://www.csoonline.com/article/3285651/network-security/what-is-network-security-definition-methods-jobs-and-salaries.html"/>
-        NetworkSecurity, <a href="https://www.ecpi.edu/sites/default/files/Blog-Network-Security-8-8-20141.png"/>image 1,
-        <a href="http://www.pngmart.com/files/1/Tools-PNG-Transparent-Image-279x279.png"/> image2
+        <a href="https://www.csoonline.com/article/3285651/network-security/what-is-network-security-definition-methods-jobs-and-salaries.html">
+        NetworkSecurity, <a href="https://www.ecpi.edu/sites/default/files/Blog-Network-Security-8-8-20141.png">image 1,
+        <a href="http://www.pngmart.com/files/1/Tools-PNG-Transparent-Image-279x279.png"> image2
         </h4>
         <br />
         <small><hr> CST 336 Internet Programming. 2017&copy; Trehy <br />
