--- a/HCOM/works/emplumada.html
+++ b/HCOM/works/emplumada.html
@@ -37,11 +37,11 @@ in html
             
             <br />
             <div id="welcomeText">
-                <p>In today's busy world we often forget to stop and remember where we come from. Our past can be defined by our heritage and the culture it brings with it.
-                Culture can be defined as the customs, arts, social institutions, and achievements of a particular nation, people, or other social group. By stopping and reflecting on our culture we can see the impact it has on the world around us.</p> 
+                <p>Emplumada is a series of poems written by Lorna Dee Cervantes. In her book she explores her journey to find a bridge between two cultures.
+                She had her heritage and American culture both competing for a place in her life. She was born in San Francisco to parents of Mexican and Native American backgrounds. In her poetry dives into themes of discrimination and loneness that she felt growing up.</p> 
                 
-                <p>Culture is often a focal point for many works of art. Literature and film use culture as a way to express a narrative and to show others a piece of their past.
-                This site will explore how culture has been used to influence works by American writers and film makers.</p>
+                <p>These poems draw from Cervantes’ past to join it with the modern age. The poem that best shows her feeling of her cultures is “Refugee Ship”. In this poem she shares her experience of feeling alienated from her heritage. 
+                The ship is a metaphor for anyone who feels that feels that they are adrift looking for safety. Her ship is lost in a sea of discrimination that keeps her from reaching the promised land and the American dream.</p>
                 <br /><br />
             </div>
         </main>
