--- a/HCOM/works/smoke.html
+++ b/HCOM/works/smoke.html
@@ -37,11 +37,11 @@ in html
             
             <br />
             <div id="welcomeText">
-                <p>In today's busy world we often forget to stop and remember where we come from. Our past can be defined by our heritage and the culture it brings with it.
-                Culture can be defined as the customs, arts, social institutions, and achievements of a particular nation, people, or other social group. By stopping and reflecting on our culture we can see the impact it has on the world around us.</p> 
+                <p>Smoke signals is a film revolving around to boys reconciling with their past. The main characters Victor and Thomas are on a journey to Phoenix Arizona to retrieve Victor's fathers' ashes. This trip allows for the boys to explore themselves and how their culture has molded them. They both grew up on a reservation and identify with their native heritage, but have developed different personalities because of it.
+                Victor is very stoic and holds on to his frustrations while Thomas is more of a romantic who delves into the artistic views of native culture.  These differences were a point of contention between the two, leading to irritation and arguments. This came to a peak at the end of the film when Victor releases his father’s ashes and recites the poem, “How do we forgive our Fathers”, he is accepting his past as well as his identity.</p> 
                 
-                <p>Culture is often a focal point for many works of art. Literature and film use culture as a way to express a narrative and to show others a piece of their past.
-                This site will explore how culture has been used to influence works by American writers and film makers.</p>
+                <p>Fire is a central theme in this film. Fire represents destruction and change. Victor and Thomas show life for a current generation of native Americans. Their far past is filled with genocide and their recent past if consumed by problems of alcoholism, domestic violence, and other tragedies.
+                These boys shine a bright light on the future for native peoples and their customs. Victors acceptance of his father and past shows that there is hope in the future for the native peoples.</p>
                 <br /><br />
             </div>
         </main>
