--- a/HCOM/works/family.html
+++ b/HCOM/works/family.html
@@ -52,7 +52,7 @@ in html
             <hr> HCOM 355 American Ethnic Literature and Culture. 2019&copy; Trehy <br />
             <br /><br />
             
-            <img src="img/csumb_logo.jpg" alt="CSUMB logo" width=60 height=60 />
+            <img src="../img/csumb_logo.jpg" alt="CSUMB logo" width=60 height=60 />
             
         </footer>
         <!-- closing footer -->
