--- a/HCOM/works/mango.html
+++ b/HCOM/works/mango.html
@@ -37,11 +37,12 @@ in html
             
             <br />
             <div id="welcomeText">
-                <p>In today's busy world we often forget to stop and remember where we come from. Our past can be defined by our heritage and the culture it brings with it.
-                Culture can be defined as the customs, arts, social institutions, and achievements of a particular nation, people, or other social group. By stopping and reflecting on our culture we can see the impact it has on the world around us.</p> 
+                <p>The House on Mango Street is a highly influential novel and a coming of age story. The novel shows how the main character, Esperanza Cordero, is influenced by her heritage and culture. Esperanza struggles to find her place in a predominately white community.
+                In the chapter “Those who don’t”, the protagonist talks about how whites who come onto mango street feel about the Latino people living there. She talks about how they are scared of them for their darker skin and how they believe that they are all criminals. 
+                Esperanza describes the situation by saying, “In the meantime they'll just have to move a little farther north from Mango Street, a little farther away every time people like us keep moving in.” She wasn’t seen for the person that she is, but rather just a skin tone. </p> 
                 
-                <p>Culture is often a focal point for many works of art. Literature and film use culture as a way to express a narrative and to show others a piece of their past.
-                This site will explore how culture has been used to influence works by American writers and film makers.</p>
+                <p>Esperanza had to deal with many hardships during her time on mango street. She wanted to escape the hardships and discrimination that faced every day. Esperanza escape of mango street also freed her from the shackles of abuse based on heritage.
+                Her vow to return and to help those still left on mango street is a promise to reform the culture to empower the Latino community.</p>
                 <br /><br />
             </div>
         </main>
