--- a/HCOM/bibliography.html
+++ b/HCOM/bibliography.html
@@ -38,14 +38,15 @@ in html
             <div id="welcomeText">
                 <p>A Family Thing.  Screenplay by Billy Bob Thornton and Tom Epperson.  Dir. Richard 
                    Pearce.  Perf. Robert Duvall and James Earl Jones.  MGM/UA Studios, 1996.</p>
+                <p>Angelou, Maya. I Shall Not Be Moved. Bantam Books, 1991.</p>
+                <p>Cervantes, Lorna Dee. Emplumada. University of Pittsburgh Press, 1993.</p>
+                <p>Cisneros, Sandra. The House on Mango Street. Alfred A. Knopf, 2018.</p>
                 <p>M. Butterfly.  Screenplay by David Henry Hwang.  Dir. David Cronenberg.  Perf. Jeremy Irons and John Lone.  Geffen Pictures, 1993.</p>
                 <p>Smoke Signals.  Screenplay by Sherman Alexie.  Dir. Chris Eyre.  Perf. Adam Beach and 
                    Evan Adam.  Miramax Home Entertainment, 1998.</p>
                 <p>Wang, Qun.  “The Piano Lesson.”  Masterplots II: Drama.  Ed. R. Kent Rasmussen.  
                    Pasadena, CA: Salem Press, 2003.  1189-93.</p>
-                <p></p>
-                <p></p>
-                <p></p>
+                
                 <br /><br />
             </div>
         </main>
